# starter-snake-rust

./: Cargo.toml
src/: logic.rs  main.rs
src/logic/: moves.rs
